<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">♀基礎体温♀</string>
    <string name="hello">%1$tm月%1$td日の体温を入力してください。</string>
    <string name="temperature">体温</string>
    <string name="celsius">℃</string>
    <string name="close">閉じる</string>
    <string name="save">保存</string>
    <string name="submit">送信</string>
    <string name="coitus">セックス</string>
    <string name="menstruation">生理</string>
    <string name="menstruationLevel">出血量</string>
    <string name="dysmenorrhea">生理痛</string>
    <string name="leukorrhea">下り物</string>
    <string name="much">多め</string>
    <string name="little">少なめ</string>
    <string name="usually">普通</string>
    <string name="minTemperature">35</string>
    <string name="maxTemperature">42</string>
    <string name="graph">グラフ</string>
    <string-array name="measureList">
    	<item></item>
    	<item>+</item>
    	<item>++</item>
    	<item>+++</item>
    </string-array>
    <string name="accountSetting">アカウント設定</string>
    <string name="setting">設定</string>
    <string name="help">ヘルプ</string>
    <string name="baseSetting">基本設定</string>
    <string name="viewItemSetting">表示項目の設定</string>
    <string name="dysmenorrheaViewExplain">生理痛項目の表示設定</string>
    <string name="leukorrheaViewExplain">下り物項目の表示設定</string>
    <string name="menstruationLevelExplain">出血量項目の表示設定</string>
    <string name="graphDateString">%1$tm/%1$td</string>
    <string name="activity_animation_duration">10</string>
</resources>
